fix 0105